adding to template for class 10 dummy variables and interactions

--- a/10-dummy-variables-and-interactions/10-dummy-variables-and-interactions.Rmd
+++ b/10-dummy-variables-and-interactions/10-dummy-variables-and-interactions.Rmd
@@ -45,9 +45,18 @@ Goal check
 
 ## 
 
-motivation for next class
+Motivation for next class
 
 ##
+
+I need your feedback:
+
+- keep 
+
+- stop
+
+- start
+
 
 ##
 
